# clock_machine

./: .gitignore  CMakeLists.txt  font.h  main.c  math  math.c
debug_build/: clock_machine.elf
